# GPRoute

./: README.md  gp_size.sh
client/: CMakeLists.txt  client.c  client.h  communicate.c  communicate.h  dedup.c  dedup.h  dis_config.h  dis_dedup.h  feature.c  feature.h  libhashfile.c  libhashfile.h  main.c  message.h  route.c  route.h  segment.c  segment.h  tools.c  tools.h
server/: CMakeLists.txt  communicate.c  communicate.h  concurrent_hashtable.c  concurrent_hashtable.h  dedup.c  dedup.h  dis_config.h  dis_dedup.h  feature.c  feature.h  main.c  message.h  tools.c  tools.h
shutdown/: CMakeLists.txt  communicate.c  communicate.h  dis_config.h  dis_dedup.h  main.c  message.h
